# laundryrecommendation

./: .gitignore  README.md  builder.md  package-lock.json  package.json
client/: next.config.mjs  package.json
client/app/: layout.tsx  page.tsx
server/: .env.example  Cargo.toml  README.md
server/src/: ai.rs  config.rs  database.rs  main.rs  routes.rs  scoring.rs  utils.rs
server/src/forecast/: merge.rs  mock.rs  mod.rs  openweather.rs  types.rs
